e2e: add FinBackupConfig scheduled backup and auto-deletion test
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -27,6 +27,7 @@ jobs:
           - full-backup
           - incremental-backup
           - misc
+          - finbackupconfig
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
